# multi-agent-research-system

./: .gitignore  README.md  export_utils.py  main.py  pyproject.toml  requirements.txt  streamlit_app.py
agents/: analyst.py  fact_checker.py  finalizer.py  orchestrator.py  researcher.py  writer.py
graph/: human_gate.py  state.py  workflow.py
tools/: llm.py  scraper.py  tavily_search.py
