[project]
name = "besttry"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=7.3.0",
    "langchain>=1.3.9",
    "langchain-anthropic>=1.4.6",
    "langchain-groq>=1.1.3",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.2.5",
    "langsmith>=0.8.15",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
]
